--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,8 +15,8 @@
     color: #fff !important;
 }
 
-.color-azul {
-    color: #0c1861 !important;
+.color-blanco {
+    color: #e5e6ec !important;
 
 }
 
