--- a/src/app/pages/indicador/indicador.component.html
+++ b/src/app/pages/indicador/indicador.component.html
@@ -1,7 +1,7 @@
 <h1>Indicador Económico: {{indicador?.nombre}}</h1>
 
   <div class="indicador-annio">
-    <h4>Buscar por año determinado para el indicador: {{indicador?.nombre}}</h4>
+    <h4 class="mt-2">Buscar por año determinado para el indicador: {{indicador?.nombre}}</h4>
     <hr>
     <div class="input-group mb-3 mr-2">
       <select class="custom-select" [formControl]="selectorAnnio">
@@ -9,7 +9,7 @@
         <option [value]="item" *ngFor="let item of anniosDeIndicadores">{{item}}</option>
       </select>
     </div>
-    <button class="btn btn-info w-50 mb-3"
+    <button class="btn btn-primary btn-lg active mb-3"
             *ngIf="valorIndicadorAnnioUnico.length > 0"
             (click)="valorIndicadorAnnioUnico.length = 0">Ocultar tabla
     </button>
@@ -49,7 +49,7 @@
 
 
   <div class="indicador-fecha">
-    <h4>Buscar por fecha determinada para el indicador: {{indicador?.nombre}}</h4>
+    <h4 class="mt-2">Buscar por fecha determinada para el indicador: {{indicador?.nombre}}</h4>
     <hr>
     <div class="input-group mb-3 mr-5">
       <select class="custom-select" [formControl]="selectorFecha">
